@@ -59,10 +59,12 @@ void CVPPConditionSetup::DoDataExchange(CDataExchange* pDX)
   DDX_Text(pDX, IDC_STAT_PROBEMODE, m_strProbeMode);
   DDX_Control(pDX, IDC_EDITPPCONDTIME, m_editCookTime);
   DDX_Text(pDX, IDC_EDITPPCONDTIME, m_iCookTime);
-  DDV_MinMaxInt(pDX, m_iCookTime, MIN_COND_TIME, MAX_COND_TIME);
+  MinMaxInt(IDC_EDITPPCONDTIME, m_iCookTime, MIN_COND_TIME, MAX_COND_TIME, 
+    "Exposure time");
   DDX_Control(pDX, IDC_EDITPPCONDDOSE, m_editCookCharge);
   DDX_Text(pDX, IDC_EDITPPCONDDOSE, m_iCharge);
-  DDV_MinMaxInt(pDX, m_iCharge, MIN_COND_CHARGE, MAX_COND_CHARGE);
+  MinMaxInt(IDC_EDITPPCONDDOSE, m_iCharge, MIN_COND_CHARGE, MAX_COND_CHARGE, 
+    "Exposure charge");
   DDX_Check(pDX, IDC_COND_AT_NAV_POINT, m_bCondAtNavPoint);
   DDX_Control(pDX, IDC_RWITHLABEL, m_butWithLabel);
   DDX_Control(pDX, IDC_RWITHNOTE, m_butWithNote);
@@ -75,7 +77,8 @@ void CVPPConditionSetup::DoDataExchange(CDataExchange* pDX)
   DDX_Radio(pDX, IDC_RCONDDOSE, m_iTimeInstead);
   DDX_Control(pDX, IDC_PPCONDGO, m_butPPcondGo);
   DDX_Text(pDX, IDC_EDIT_POST_MOVE_DELAY, m_iPostMoveDelay);
-  DDV_MinMaxInt(pDX, m_iPostMoveDelay, MIN_MOVE_DELAY, MAX_MOVE_DELAY);
+  MinMaxInt(IDC_EDIT_POST_MOVE_DELAY, m_iPostMoveDelay, MIN_MOVE_DELAY, MAX_MOVE_DELAY,
+    "Delay if moving to next position");
   DDX_Control(pDX, IDC_PPCOND_NEXT_AND_GO, m_butNextAndGo);
 }
 
