@@ -4023,15 +4023,21 @@ Device Settings:
         </tr>
         <tr>
           <td class="style2">
-            SEMCCD-GMS3.30-64.dll</td>
+            SEMCCD-GMS3.01-64.dll</td>
           <td class="style3">
-            The plugin to DigitalMicrograph for 64-bit GMS 3.30</td>
+            The plugin to DigitalMicrograph for 64-bit GMS 3.01 - 3.30</td>
         </tr>
         <tr>
           <td class="style2">
             SEMCCD-GMS3.31-64.dll</td>
           <td class="style3">
-            The plugin to DigitalMicrograph for 64-bit GMS 3.31 and above</td>
+            The plugin to DigitalMicrograph for 64-bit GMS 3.31 - 3.3x</td>
+        </tr>
+        <tr>
+          <td class="style2">
+            SEMCCD-GMS3.42-64.dll</td>
+          <td class="style3">
+            The plugin to DigitalMicrograph for 64-bit GMS 3.4 and above</td>
         </tr>
         <tr>
           <td class="style2">
